# druid-chat-proof-of-concept

./: Cargo.toml  README.md
src/: chat_ui.rs  main.rs  settings_ui.rs
src/helper/: helper_functions.rs  layout_settings.rs
src/widgets/: chat_window_widget.rs  mod.rs  single_message_widget.rs  timeline_item.rs  timeline_item_widget.rs
