[package]
name = "druid-chat-proof-of-concept"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = ["svg", "im", "image", "png"], rev = "8cadfc8f81661a0404d663e089592e327cb6d56c" }
piet-common = { git = "https://github.com/linebender/piet.git" }
usvg = { version = "0.14.1" }
tracing = { version = "0.1.22" }
rand = "0.8"
num-traits = "0.2"
num-derive = "0.2"
chrono = "0.4"
